<resources>
    <string name="app_name">Dostar</string>
    <string name="home">Home</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="forum">Forum</string>
    <string name="sign_out">Sign out</string>
    <string name="courses">Courses</string>
    <string name="vacancies">Vacancies</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="create_course">Create course</string>
    <string name="create_vacancy">Create vacancy</string>
    <string-array name="languages">
        <item>Russian</item>
        <item>English</item>
    </string-array>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="categories">
        <item>I.T.</item>
        <item>Finance</item>
    </string-array>

    <string-array name="region_almaty">
        <item>Алматы</item>
        <item>Талгар</item>
        <item>Талдыкорган</item>
        <item>Капшагай</item>
        <item>Текели</item>
    </string-array>
    <string-array name="region_atyrau">
        <item>Атырау</item>
        <item>Макат</item>
        <item>Курмаганзы</item>
        <item>Махамбет</item>
        <item>Доссор</item>
    </string-array>
    <string-array name="region_akmolinsk">
        <item>Астана</item>
        <item>Акбулак</item>
        <item>Бурабай</item>
        <item>Кокшетау</item>
    </string-array>
    <string-array name="region_sowth">
        <item>Шымкент</item>
        <item>Акжол</item>
        <item>Балыкты</item>
        <item>Арысь</item>
    </string-array>
    <string-array name="region_pavlodar">
        <item>Павлодар</item>
        <item>Екибастуз</item>
        <item>Аксу</item>
        <item>Баянаул</item>
    </string-array>
    <string name="send">send</string>
    <string name="activate_changes">Change language</string>
    <string name="loading">loading</string>
    <string name="languages_prompt">Chose a language</string>
    <string name="event_text_hint">Event text</string>
    <string name="add_event">add event</string>
    <string name="next_event">next event</string>
    <string name="email">email</string>
    <string name="full_name">full name</string>
    <string name="phone_number">phone number</string>
    <string name="redact">Redact</string>
    <string name="about">about yourself</string>
    <string name="respond">Respond on vacancy</string>
    <string name="respond_success">You are now responded on current vacancy</string>
    <string name="respond_failure">Responding error, try later</string>
    <string name="respond_already_done">You are already responding current vacancy</string>
    <string name="password">password</string>
    <string name="course_title">course title</string>
    <string name="course_category">course category</string>
    <string name="course_description">course description</string>
    <string name="youtube_link">YouTube URL</string>
    <string name="work_experience">work experience</string>
    <string name="address">address</string>
    <string name="skills">skills</string>
    <string name="education">education</string>
    <string name="gender">gender</string>
    <string name="profile_update_failure">profile update failed, try later</string>
    <string name="profile_update_success">profile updated</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="courses_search">Search by courses&#8230;</string>
    <string name="vacancies_search">Search by vacancies&#8230;</string>
    <string name="vacancies_filter">Vacancies filter</string>
    <string name="forum_search">Search by forum&#8230;</string>
    <string name="gender_prompt">Choose your gender</string>
    <string name="category_prompt">Choose a category</string>
    <string name="region_prompt">Choose a region</string>
    <string name="city_prompt">Choose a city</string>
    <string name="select_parameters">Select parameters to filter vacancies</string>
    <string name="clear_filter">Clear filter</string>
    <string name="category_filter">Category:</string>
    <string name="region_filter">Region:</string>
    <string name="city_filter">City:</string>
    <string name="rubrick">Rubric</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="contacts">contact email</string>
    <string name="password_length_warning">Password length must be at least 6 symbols</string>
    <string name="auth_success">Authentication success.</string>
    <string name="auth_failure">Authentication failed.</string>
</resources>
