<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@drawable/background_image"
    android:padding="16dp">

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_field"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_in_button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp" />


    <Button
        android:id="@+id/sign_in_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_in"
        android:textColor="@color/cardview_light_background" />

</RelativeLayout>