<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_collapseParallaxMultiplier="1.0"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical"
            android:weightSum="8"
            android:background="@drawable/background_image">

            <EditText
                android:layout_weight="2"
                android:id="@+id/course_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/course_title"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"/>

            <EditText
                android:layout_weight="3"
                android:id="@+id/course_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/course_description"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"/>

            <EditText
                android:layout_weight="1"
                android:id="@+id/youtube_link"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/youtube_link"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"/>

            <Button
                android:layout_weight="2"
                android:id="@+id/create_button"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/create_course"
                android:textColor="@color/cardview_light_background" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
