<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_collapseParallaxMultiplier="1.0"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4"
            android:background="@drawable/background_image"
            android:paddingHorizontal="26dp">

            <EditText
                android:id="@+id/address_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/phone_field"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:shadowColor="@color/cardview_light_background"
                android:textColor="@color/cardview_light_background"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="157dp" />

            <EditText
                android:id="@+id/about_field"
                android:layout_width="match_parent"
                android:layout_height="242dp"
                android:layout_above="@+id/edit_profile_button"
                android:layout_alignLeft="@+id/name_field"
                android:layout_alignStart="@+id/name_field"
                android:layout_marginBottom="17dp"
                android:allowUndo="false"
                android:ems="10"
                android:hint="@string/about"
                android:inputType="textPersonName"
                android:shadowColor="@color/cardview_light_background"
                android:textColor="@color/cardview_light_background"
                tools:layout_editor_absoluteX="84dp"
                tools:layout_editor_absoluteY="232dp" />

            <EditText
                android:id="@+id/phone_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/name_field"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:shadowColor="@color/cardview_light_background"
                android:textColor="@color/cardview_light_background"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="91dp" />

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/about_field"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:shadowColor="@color/cardview_light_background"
                android:textColor="@color/cardview_light_background"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="28dp" />

            <Button
                android:id="@+id/edit_profile_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="42dp"
                android:hint="@string/redact"
                android:textColor="@color/cardview_light_background"/>

        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
